--- a/index.html
+++ b/index.html
@@ -7,23 +7,27 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Portifólio</title>
 </head>
-
-<header class="menu">
-    <div id="logo">
-        <h1>LOGO</h1>
-    </div>
-
-    <nav id="navbar">
-        <ul>
-           <a href="#"><li>Quem Sou</li></a> 
-           <a href="#"><li>Projetos</li></a> 
-           <a href="#"><li>Competências</li></a> 
-           <a href="#"><li>Contato</li></a> 
-        </ul>
-    </nav>
-</header>
 <body>
+    <header>
+
+        <nav class="navbar">
+            <div id="logo">
+                <h1>LOGO</h1>
+            </div>
+            <ul>
+               <a href="#"><li>Quem Sou</li></a> 
+               <a href="#"><li>Projetos</li></a> 
+               <a href="#"><li>Competências</li></a> 
+               <a href="#"><li>Contato</li></a> 
+            </ul>
+        </nav>
+    </header>  
     
-    
+    <section>
+        <div class="headlines">
+            <h2>Henrique Dourado Domingos</h2>
+            <img src="img/perfil (4).jpg">
+        </div>
+    </section>
 </body>
 </html>
