--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Portifólio</title>
 </head>
 <body>
@@ -12,7 +12,7 @@
 
         <nav class="navbar">
             <div id="logo">
-                <h1>LOGO</h1>
+                <h1>Profile</h1>
             </div>
             <ul>
                <a href="#"><li>Quem Sou</li></a> 
@@ -22,10 +22,15 @@
             </ul>
         </nav>
     </header>  
-    
+
     <section>
+        <div class="main-text">
+             <br> <h2> Henrique Dourado</h2>
+            <h4> Web Developer |  Student </h4>
+            
+        </div>
         <div class="headlines">
-            <h2>Henrique Dourado Domingos</h2>
+            <h2>Quem Sou</h2>
             <img src="img/perfil (4).jpg">
         </div>
     </section>
