--- a/index.html
+++ b/index.html
@@ -25,14 +25,20 @@
 
     <section>
         <div class="main-text">
+            <h3>Hello i'm</h3>
              <br> <h2> Henrique Dourado</h2>
             <h4> Web Developer |  Student </h4>
             
         </div>
+    </section>
+        <section>
+            <div class="about-container">
         <div class="headlines">
-            <h2>Quem Sou</h2>
+            <h2>About</h2>
             <img src="img/perfil (4).jpg">
         </div>
+        </div>
     </section>
+    
 </body>
 </html>
