--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
                 <div class="about-img">
                     <img src="img/perfil (4).jpg">
-                <span class="circle-spin"></span>
+               
         </div>
         <div class="about-text">
            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. <br>
@@ -52,5 +52,28 @@
         </div>
     </section>
     
+    <section>
+        <div class="projetos">
+            <div class="headline">Projetos</div>
+            <div class="projetos-container">
+                <div class="projeto">
+                   <a href="https://henriquedouradoo.github.io/Iphone-landingpage/"><img src="img/Iphone page.png" alt="" class="testemunhas-img"></a> 
+                    <p> Projeto pessoal: Iphone landing page, na qual divulga um dos produtos da marca Apple. <br> <br> HTML CSS & Básico de Js</p>
+                </div>
+                <div class="projeto">
+                  <a href="https://henriquedouradoo.github.io/Website-Science/"> <img src="img/Data Science Page.png" alt="" class="testemunhas-img"></a>
+                    <p> Projeto Pessoal, Página focada em tecnologia e dados, Essa empresa de Data Science é líder no mercado, 
+                        fornecendo soluções inovadoras e personalizadas para empresas que desejam aproveitar ao máximo seus dados. <br> <br>
+                        HTML CSS & básico de Js</p>
+                </div>
+                <div class="projeto">
+                   <a href="https://henriquedouradoo.github.io/amavel.github.io/"><img src="img/Amavel studios page.png" alt="" class="testemunhas-img"></a>
+                    <p> Projeto feito com finalidade acadêmica, uma paródia da marvel, 
+                        cujo a ideia é práticar o que foi ensinado de uma maneira cómica e prática em grupos. 
+                   <br> <br> HTML & CSS</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
